# generator

./: .gitignore  .replit  backup.sql  build.sh  html  load_data.sql  manage.py  package-lock.json  package.json  pyproject.toml  replit.md  requirements.txt
Board/: routing.py
Board/templates/Board/: test.html
Generator/: .gitignore  admin.py  apps.py  asgi.py  dump.rdb  dump.sql  main.py  models.py  settings.py  urls.py  views.py  wsgi.py
Generator/Board/: consumers.py  urls.py  views.py
Generator/Generator/: admin.py  latex_utils.py  models.py  pdf_utils.py  settings.py  urls.py  views.py
Generator/Generator/migrations/: 0001_initial.py  0002_add_indexes_level_subject.py  0003_add_composite_indexes.py  0004_alter_task_task_template.py  0004_use_timezone_now.py  0006_task_author_alter_task_answer.py  0007_level_level_rus.py  (+4 more)
Generator/migrations/: 0001_initial.py  0002_task_added_at_taskimages.py  0002_variant_share_token_excalidrawboard.py  0003_part_tags_task_files_alter_variant_created_by_and_more.py  0003_rename_taskimages_taskimage.py  0004_rename_task_id_taskimage_task.py  0005_alter_task_task_template.py  0006_variant_content.py  0007_linked_task_groups.py
Generator/templates/: base.html  exam.html  index.html  old_index.html  pdf_template.html  pdf_templateSpring.html  subject.html  tasks.html  var.html
attached_assets/: data_1772232553313.sql  data_dump_1771495393857.sql  dump_1771696134790.sql  oge_матем_14_1772294696717.csv
frontend/: index.html  package-lock.json  package.json  render_mathjax.cjs  vite.config.js
frontend/src/: App.jsx
(+32 files in other folders)
